@@ -6,6 +6,7 @@
 package org.whispersystems.textsecuregcm.controllers;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -14,6 +15,7 @@ import io.dropwizard.testing.junit5.DropwizardExtensionsSupport;
 import io.dropwizard.testing.junit5.ResourceExtension;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
@@ -26,7 +28,6 @@ import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 import org.assertj.core.api.Assertions;
-import org.assertj.core.api.Condition;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.glassfish.jersey.test.grizzly.GrizzlyWebTestContainerFactory;
 import org.junit.jupiter.api.Test;
@@ -36,7 +37,6 @@ import org.whispersystems.textsecuregcm.attachments.TusAttachmentGenerator;
 import org.whispersystems.textsecuregcm.attachments.TusConfiguration;
 import org.whispersystems.textsecuregcm.auth.AuthenticatedDevice;
 import org.whispersystems.textsecuregcm.configuration.secrets.SecretBytes;
-import org.whispersystems.textsecuregcm.entities.AttachmentDescriptorV2;
 import org.whispersystems.textsecuregcm.entities.AttachmentDescriptorV3;
 import org.whispersystems.textsecuregcm.experiment.ExperimentEnrollmentManager;
 import org.whispersystems.textsecuregcm.limits.RateLimiter;
@@ -47,7 +47,7 @@ import org.whispersystems.textsecuregcm.util.SystemMapper;
 import org.whispersystems.textsecuregcm.util.TestRandomUtil;
 
 @ExtendWith(DropwizardExtensionsSupport.class)
-class AttachmentControllerTest {
+class AttachmentControllerV4Test {
 
   private static final RateLimiter RATE_LIMITER = mock(RateLimiter.class);
 
@@ -55,8 +55,8 @@ class AttachmentControllerTest {
       when(rateLimiters.getAttachmentLimiter()).thenReturn(RATE_LIMITER));
 
 
-  private static String CDN3_ENABLED_CREDS = AuthHelper.getAuthHeader(AuthHelper.VALID_UUID, AuthHelper.VALID_PASSWORD);
-  private static String CDN3_DISABLED_CREDS = AuthHelper.getAuthHeader(AuthHelper.VALID_UUID_TWO, AuthHelper.VALID_PASSWORD_TWO);
+  private static final String CDN3_ENABLED_CREDS = AuthHelper.getAuthHeader(AuthHelper.VALID_UUID, AuthHelper.VALID_PASSWORD);
+  private static final String CDN3_DISABLED_CREDS = AuthHelper.getAuthHeader(AuthHelper.VALID_UUID_TWO, AuthHelper.VALID_PASSWORD_TWO);
   private static final ExperimentEnrollmentManager EXPERIMENT_MANAGER = MockUtils.buildMock(ExperimentEnrollmentManager.class, mgr -> {
     when(mgr.isEnrolled(AuthHelper.VALID_UUID, AttachmentControllerV4.CDN3_EXPERIMENT_NAME)).thenReturn(true);
     when(mgr.isEnrolled(AuthHelper.VALID_UUID_TWO, AttachmentControllerV4.CDN3_EXPERIMENT_NAME)).thenReturn(false);
@@ -93,8 +93,6 @@ class AttachmentControllerTest {
           .addProvider(new AuthValueFactoryProvider.Binder<>(AuthenticatedDevice.class))
           .setMapper(SystemMapper.jsonMapper())
           .setTestContainerFactory(new GrizzlyWebTestContainerFactory())
-          .addResource(new AttachmentControllerV2(RATE_LIMITERS, "accessKey", "accessSecret", "us-east-1",
-              "attachmentv2-bucket"))
           .addProvider(new AttachmentControllerV4(RATE_LIMITERS,
               gcsAttachmentGenerator,
               new TusAttachmentGenerator(new TusConfiguration(new SecretBytes(TUS_SECRET), TUS_URL)),
@@ -121,7 +119,7 @@ class AttachmentControllerTest {
   }
 
   @Test
-  void testV4GcsForm() {
+  void testV4GcsForm() throws MalformedURLException {
     AttachmentDescriptorV3 descriptor = resources.getJerseyTest()
         .target("/v4/attachments/form/upload")
         .request()
@@ -131,7 +129,7 @@ class AttachmentControllerTest {
     assertValidCdn2Response(descriptor);
   }
 
-  private static void assertValidCdn2Response(final AttachmentDescriptorV3 descriptor) {
+  private static void assertValidCdn2Response(final AttachmentDescriptorV3 descriptor) throws MalformedURLException {
     assertThat(descriptor.key()).isNotBlank();
     assertThat(descriptor.cdn()).isEqualTo(2);
     assertThat(descriptor.headers()).hasSize(3);
@@ -140,21 +138,10 @@ class AttachmentControllerTest {
     assertThat(descriptor.headers()).extractingByKey("x-goog-content-length-range").isEqualTo("1,1000");
     assertThat(descriptor.signedUploadLocation()).isNotEmpty();
     assertThat(descriptor.signedUploadLocation()).contains("X-Goog-Signature");
-    assertThat(descriptor.signedUploadLocation()).is(new Condition<>(x -> {
-      try {
-        new URL(x);
-      } catch (MalformedURLException e) {
-        return false;
-      }
-      return true;
-    }, "convertible to a URL", (Object[]) null));
+    //noinspection ResultOfMethodCallIgnored
+    assertThatNoException().isThrownBy(() -> URI.create(descriptor.signedUploadLocation()));
 
-    final URL signedUploadLocation;
-    try {
-      signedUploadLocation = new URL(descriptor.signedUploadLocation());
-    } catch (MalformedURLException e) {
-      throw new AssertionError(e);
-    }
+    final URL signedUploadLocation = URI.create(descriptor.signedUploadLocation()).toURL();
     assertThat(signedUploadLocation.getHost()).isEqualTo("some-cdn.signal.org");
     assertThat(signedUploadLocation.getPath()).startsWith("/attach-here/");
     final Map<String, String> queryParamMap = new HashMap<>();
@@ -179,33 +166,4 @@ class AttachmentControllerTest {
     assertThat(credentialParts[3]).isEqualTo("storage");
     assertThat(credentialParts[4]).isEqualTo("goog4_request");
   }
-
-  @Test
-  void testV2Form() throws IOException {
-    AttachmentDescriptorV2 descriptor = resources.getJerseyTest()
-                                                 .target("/v2/attachments/form/upload")
-                                                 .request()
-                                                 .header("Authorization", AuthHelper.getAuthHeader(AuthHelper.VALID_UUID, AuthHelper.VALID_PASSWORD))
-                                                 .get(AttachmentDescriptorV2.class);
-
-    assertThat(descriptor.key()).isEqualTo(descriptor.attachmentIdString());
-    assertThat(descriptor.acl()).isEqualTo("private");
-    assertThat(descriptor.algorithm()).isEqualTo("AWS4-HMAC-SHA256");
-    assertThat(descriptor.attachmentId()).isGreaterThan(0);
-    assertThat(String.valueOf(descriptor.attachmentId())).isEqualTo(descriptor.attachmentIdString());
-
-    String[] credentialParts = descriptor.credential().split("/");
-
-    assertThat(credentialParts[0]).isEqualTo("accessKey");
-    assertThat(credentialParts[2]).isEqualTo("us-east-1");
-    assertThat(credentialParts[3]).isEqualTo("s3");
-    assertThat(credentialParts[4]).isEqualTo("aws4_request");
-
-    assertThat(descriptor.date()).isNotBlank();
-    assertThat(descriptor.policy()).isNotBlank();
-    assertThat(descriptor.signature()).isNotBlank();
-
-    assertThat(new String(Base64.getDecoder().decode(descriptor.policy()))).contains("[\"content-length-range\", 1, 104857600]");
-  }
-
 }
